fix: corrige as rotas dos controllers
